--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
+  },
+  "dependencies": {
+    "@fontsource-variable/rubik": "^5.2.8",
+    "@tailwindcss/vite": "^4.1.16",
+    "remixicon": "^4.7.0",
+    "tailwindcss": "^4.1.16"
   }
 }
